# testRTC_Py

./: .appveyor.yml  .project  .travis.yml  CMakeLists.txt  MyService_idl_example.py  README.XXXpy  README.md  RTC.xml  RTC.xml20190606175158  XXXpy.conf  XXXpy.py  appveyor.yml  idlcompile.bat  idlcompile.sh  rtc.conf
cmake/: xxxpy-config.cmake.in
doc/: conf.py.in
doc/content/: index.txt  index_j.txt
idl/: CMakeLists.txt
scripts/ubuntu_1604/: Dockerfile
scripts/ubuntu_1804/: Dockerfile
test/: CMakeLists.txt  XXXpyTest.py
